[gd_scene load_steps=13 format=3 uid="uid://d4gjydajersap"]

[ext_resource type="Script" path="res://skeleton.gd" id="1_eg8kq"]
[ext_resource type="Texture2D" uid="uid://i0div3ni7hp0" path="res://mystic_woods_assets/sprites/characters/skeleton.png" id="1_vi1xk"]

[sub_resource type="Animation" id="Animation_ys34i"]
resource_name = "Attack"
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.433333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [12, 16, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hurtbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.333333, 0.366667, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, false, false]
}

[sub_resource type="Animation" id="Animation_rpay8"]
resource_name = "Death"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [24, 28]
}

[sub_resource type="Animation" id="Animation_xgf4y"]
resource_name = "Idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 4]
}

[sub_resource type="Animation" id="Animation_51j77"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hurtbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_dpke8"]
resource_name = "Running"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [5, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pvktf"]
_data = {
"Attack": SubResource("Animation_ys34i"),
"Death": SubResource("Animation_rpay8"),
"Idle": SubResource("Animation_xgf4y"),
"RESET": SubResource("Animation_51j77"),
"Running": SubResource("Animation_dpke8")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d20j5"]
size = Vector2(8, 4)

[sub_resource type="CircleShape2D" id="CircleShape2D_7q64b"]
radius = 88.0227

[sub_resource type="CircleShape2D" id="CircleShape2D_my0gy"]
radius = 12.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p63da"]
size = Vector2(17, 34)

[node name="Skeleton" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 2
motion_mode = 1
script = ExtResource("1_eg8kq")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_vi1xk")
offset = Vector2(0.5, -22)
hframes = 6
vframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pvktf")
}
autoplay = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_d20j5")

[node name="Label" type="Label" parent="."]
offset_left = -15.0
offset_top = -38.0
offset_right = 25.0
offset_bottom = -15.0
text = "test"

[node name="ChaseArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChaseArea"]
rotation = 1.5708
shape = SubResource("CircleShape2D_7q64b")

[node name="AttackArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(16, -7)
shape = SubResource("CircleShape2D_my0gy")

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(18, -9)
shape = SubResource("RectangleShape2D_p63da")

[node name="AlertTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[connection signal="body_entered" from="ChaseArea" to="." method="_on_chase_area_body_entered"]
[connection signal="body_exited" from="ChaseArea" to="." method="_on_chase_area_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="AlertTimer" to="." method="_on_alert_timer_timeout"]
